# proXXy

./: .gitattributes  .gitignore  LICENSE  README.md  dockerfile  proXXy.py  proxy_check.c  proxy_check.cp311-win_amd64.pyd  proxy_check.pyx  proxy_sources.json  proxy_sources.py  pyproject.toml  requirements.txt  src_check.py  update.bat  update.sh  utils.c  utils.cp311-win_amd64.pyd  utils.py  utils.pyx
.github/: .gitattributes  FUNDING.yml
.github/workflows/: lin_retrieve.yaml  run_proXXy.yaml  win_retrieve.yaml
proxy_lists/: http.txt  socks4.txt  socks5.txt
proxy_sources/: http.txt  https.txt  socks4.txt  socks5.txt
scraped/: HTTP.txt  SOCKS4.txt  SOCKS5.txt
update/: update.bat  update.ps1  update.sh
vagrant/linux/: Vagrantfile
vagrant/windows/: Vagrantfile
validated/: INVALID.yaml  VALID.yaml
