[tool.poetry]
package-mode = false
name = "proXXy"
version = "v2.7"
description = "A super simple asynchronous multithreaded proxy scraper; scraping & checking ~500k HTTP, HTTPS, SOCKS4, & SOCKS5 proxies."
authors = ["Solanaceae"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pystyle = "^2.9"
yaspin = "^3.4.0"
scrapy = "^2.14.0"
tqdm = "^4.67.1"
PyYAML = "^6.0.3"
hrequests = {version = "^0.9.2", extras = ["all"]}
aiohttp = "^3.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
